--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "edata/json_docs/source/_themes"]
-	path = edata/json_docs/source/_themes
-	url = git://github.com/mitsuhiko/flask-sphinx-themes.git
+[submodule "source/json_docs/_themes"]
+	path = source/json_docs/_themes
+	url = https://github.com/mitsuhiko/flask-sphinx-themes
